feat: add swagger for /r
