# docs/swagger.json
@@ -26,6 +26,107 @@
                     }
                 }
             }
+        },
+        "/r": {
+            "get": {
+                "description": "Returns recommended products for a user from a vendor",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get vendor recommendations",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Vendor Key",
+                        "name": "vendor_key",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Click ID",
+                        "name": "click_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Image Width",
+                        "name": "w",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Image Height",
+                        "name": "h",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/vendor.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "vendor.ProductPatch": {
+            "type": "object",
+            "properties": {
+                "image": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "vendor.Response": {
+            "type": "object",
+            "properties": {
+                "product_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "product_patch": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/vendor.ProductPatch"
+                    }
+                }
+            }
         }
     }
 }
